--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /*
 Theme Name: TripTheme
-Theme URI: https://example.com
-Author: Your Name
-Author URI: https://example.com
+Theme URI: 
+Author: Nikhil
+Author URI: 
 Description: A travel theme for WordPress.
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: triptheme
 */
+
